--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="chapter">Chapter 1.1: Statements and structure of a program</h1>
+
+    <nav>
+        <h2>Index</h2>
+        <ul>
+            <li><a href="#chapter1-1">Chapter 1.1: Statements and structure of a program</a></li>
+            <li><a href="#chapter1-2">Chapter 1.2: Comments</a></li>
+        </ul>
+    </nav>
+
+    <h1 id="chapter1-1" class="chapter">Chapter 1.1: Statements and structure of a program</h1>
     <h1>Statements:</h1>
     <p>A computer program is a sequence of instructions that tells the computer what to do.
         A statement is a type of instruction that tells the program to perform some action. 
@@ -40,7 +49,7 @@
         the function main has been executed. (Though due to bugs or mistakes, the code may terminate 
         early, so make sure not to mess up.)</p>
     <p>Functions are typically written to do a specific job or perform some useful action. 
-        A function named <span class="highlighbox"><b> max </b></span> might have a statement that 
+        A function named <span class="highlightbox"><b>max</b></span> might have a statement that 
         figures out which number is larger.</p>
     <p>A function called <span class="highlightbox"><b>calculateGrade</b></span> may calculate a student's grade from tests, quizzes, or homework. 
         A function named <span class="highlightbox"><b>printEmployee</b></span> might print stored information on an employee to the console. Remember, functions 
@@ -50,7 +59,7 @@
         functions named <span class="highlightbox"><b>main</b></span> 
         or <span class="highlightbox"><b>doSomething</b></span>.</p></div>
         
-    <h1>Hello World:</h1>
+    <h1 id="hello-world">Hello World:</h1>
     <p>Now that you have a decent, brief understanding of what statements and functions are in C++, 
         let's go to the Hello, World! program and take a high-level look at what it does.</p>
     <div class="code">
@@ -76,7 +85,7 @@ int main() {
       <p>Line 6 is a <span class="highlightbox"><b>return statement</b></span> that sends 0 to the Operating System (OS), signaling successful execution of the program. It’s the last 
           statement to run, completing the program.</p>
       <p>When you compile and run you will see <span class="highlightbox"><b>Hello, World!</b></span>in the console.</p>
-      <h1>Syntax and Syntax Errors:</h1>
+      <h1 id="syntax-errors">Syntax and Syntax Errors:</h1>
       <p>In English, sentences are constructed according to grammatical rules that you learned in school. For example, normal sentences end with a period. 
           That is syntax. If there is no period, then that is a syntax error.</p>
       <p>C++ has syntax too, rules about how your program must be constructed in order to be considered valid by the compiler. The compiler is responsible 
@@ -99,32 +108,25 @@ int main() {
           This error might stem from line 5, where a semicolon is conventionally expected.</p>
       <p>Syntax errors are common when writing a program; fortunately, they're typically straightforward to fix, as the 
           compiler will tell you where the problem is. A program will never compile if a syntax error is present.</p>
-      <h1 class="chapter">Chapter 1.2: Comments</h1>
+
+      <h1 id="chapter1-2" class="chapter">Chapter 1.2: Comments</h1>
       <h1>Single-Line Comments</h1>
       <p>The <span class="highlightbox"><b>//</b></span> symbol begins a C++ single-line comment, which pretty much 
           tells the compiler to ignore everything 
           from the beginning of <span class="highlightbox"><b>//</b></span> to the end of the line.</p>
-      <p>Typically, a single-line comment is used to quickly explain a line of code.</p>
-      <p>Having comments to the right of the line can make the both the code and the line hard to read, 
-          especially if the line is long. if the lines are short the comments can be alligned.</p>
-      <h1>Multi-Line Comments</h1>
-      <p>The /* and */ pair of symbols denotes a C-style multi-line comment. Everything in between the symbols is ignored.</p>
-      <div class="code"><pre>/* This is a multi-line comment.
-   This line will be ignored.
-   So will this one. */</pre></div>
-      <p>Since everything between the comments is ignored, some programmers beautify their comments.</p>
-      <div class="code"><pre>/* This is a multi-line comment.
- * the matching asterisks to the left
- * can make this easier to read
- */</pre></div>
-      <p>Multi-line comments cannot be nested. The following would have these results:</p>
-      <div class="code"><pre>/* This is a multi-line 
-/* comment */ this is not inside the comment */
-// The above comment ends at the first */, not the second */</pre></div>
-      <p>When the compiler tries to compile this, it will ignore everything 
-          from the <span class="highlightbox"><b>first /* to the first */</b></span>. Since this is not inside 
-          the comment, <span class="highlightbox"><b>*/</b></span> is not considered 
-          part of the comment, so the compiler will try to compile it and will fail.</p>
-      
+      <p>Typically, a single-line comment appears at the top of the file with your name, the date, and other personal information. 
+          They are also used to describe the logic of a statement or an expression.</p>
+
+      <h1>Multi-line Comments</h1>
+      <p>Multi-line comments span multiple lines, starting with <span class="highlightbox"><b>/*</b></span> and ending with <span class="highlightbox"><b>*/</b></span>. 
+          These are helpful for explaining longer sections of code.</p>
+      <p>Example:</p>
+      <div class="code">
+  <pre>/*
+This is a multi-line comment.
+It can take up as many lines as needed.
+*/</pre>
+</div>
+
 </body>
 </html>
