--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="#chapter1-1">Chapter 1.1: Statements and structure of a program</a></li>
             <li><a href="#chapter1-2">Chapter 1.2: Comments</a></li>
+            <li><a href="#chapter1-3">Chapter 1.3: Introduction to Objects and Variables</a></li>
         </ul>
     </nav>
 
@@ -141,5 +142,49 @@ this is not inside the comment */
        considered part of the comment, the compiler will try and result in a compile error.</p>
        <p>This one place where using a syntax highlighter can be useful, as the different color for the comment should
        make clear whats considered part of the comment and which one is not.</p>
+       <div class="warning">
+            <h1>Warning</h1>
+            <p>Dont use multi-line comments inside other multi-line comments. Wrapping single-line comments
+                inside a multi-line comment is okay.
+            </p>
+       </div>
+       <div class="best-practice">
+            <h1>Best Practice</h1>
+            <p>Comment your code liberally, and write it like the person does not know what
+                the code does. Dont assume youll remember you made specific choices.
+            </p>
+       </div>
+
+       <h1 id="chapter1-3" class="chapter">Chapter 1.3: Introduction to Objects and Variables</h1>
+       <p>A program can acquire data to work in many ways: from a file or database, over a network, from the user
+        providing input on a keyboard, or from the programmer.
+       </p>
+       <p>A single peice of data is called a <span class="highlightbox"><b>value</b></span>. 
+        Common examples of <span class="highlightbox"><b>value</b></span> includes 
+        <span class="highlightbox"><b>letters</b></span>, 
+        <span class="highlightbox"><b>numbers</b></span>, and 
+        <span class="highlightbox"><b>text</b></span>.
+       </p>
+
+       <h1>Random Access Memory</h1>
+       <p>The main memory in a computer is called 
+        <span class="highlightbox"><b>Random Access Memory</b></span>. When we run a program, 
+        the OS loads the program into ram, any data hardcoded will load like 
+        <span class="highlightbox"><b>Hello, World!</b></span>
+       </p>
+       <p>The operating system reserves extra RAM for storing data during a program's runtime, 
+        such as user input, file data, or calculations. RAM can be seen as numbered boxes holding values. In older languages like 
+        Applesoft BASIC, programmers could directly access specific memory locations, while modern languages manage this automatically.</p>
+        <h1>Objects and Variables</h1>
+        <p>In C++, direct access memory is discouraged, instead we access memory indirectly through an object. 
+            An <span class="highlightbox"><b>object</b></span> in a region of storage that can store a value, and has associated properties. 
+        </p>
+        <p>The compiler and operating system handle memory assignment for objects, so instead of specifying exact memory locations, 
+            we can simply refer to objects to store and retrieve values. This allows us to focus on using 
+            objects without worrying about their specific placement in memory. 
+        </p>
+        <p>Although objects in C++ can be unamed, more often we name our objects with a 
+            <span class="highlightbox"><b>variable</b></span>.
+        </p>
 </body>
 </html>
