--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="#chapter1-1">Chapter 1.1: Statements and structure of a program</a></li>
             <li><a href="#chapter1-2">Chapter 1.2: Comments</a></li>
             <li><a href="#chapter1-3">Chapter 1.3: Introduction to Objects and Variables</a></li>
+            <li><a href="#chapter1-4">Chapter 1.4: Variable assignment and initialization</a></li>
         </ul>
     </nav>
 
@@ -186,5 +187,84 @@ this is not inside the comment */
         <p>Although objects in C++ can be unamed, more often we name our objects with a 
             <span class="highlightbox"><b>variable</b></span>.
         </p>
+        <h1>Variable instantiation</h1>
+        <p>In order to create a variable, we use a special declaration statement called a 
+            <span class="highlightbox"><b>definition</b></span>.
+        </p>
+        <p>Heres an example of a variable named <span class="highlightbox"><b>x</b></span>:
+        </p>
+
+        <div class="code"><pre>int x; // define a variable named x, of type int<pre></div>
+
+        <p>At compile time, when the compiler sees this statement it makes a note to itself that we are defining a variable,
+            giving it the name <span class="highlightbox"><b>x</b></span> and specifying it as an <span class="highlightbox"><b>int</b></span>.
+            From that point foward the compiler sees the identifer <span class="highlightbox"><b>x</b></span> as a variable.
+        </p>
+        <p>At <span class="highlightbox"><b>runtime</b></span>, a variable is <span class="highlightbox"><b>instantiated</b></span>, meaning it is created and assigned a memory address. 
+            For example, if variable x is instantiated at memory location 140, the program will access that location whenever x is used. 
+            An instantiated object is also called an <span class="highlightbox"><b>instance</b></span>.
+        </p>
+
+        <h1>Data Types</h1>
+        <p>
+            So far, we have covered that objects are regions of storage that can store a data value, a 
+            <span class="highlightbox"><b>data type</b></span>, or also called a <span class="highlightbox"><b>type</b></span> 
+            determines what kind of value the object will store.
+        </p>
+
+        <p>
+            Integers are just one of many data types that C++ uses out of box, 
+            here is an example of defining a variable using data type double:
+        </p>
+        <div class="code"><pre>double width; // define a variable named width, of type double</pre></div>
+        <p>C++ also allows you to create your own custom types.
+            For the beginning, well stick with integer variables because they are simple. 
+            Soon we will learn <span class="highlightbox"><b>double</b></span>.
+        </p>
+        <h1>Defining multiple variables</h1>
+        <p>It is possible to define multiple variables of the same type in a single statement by seperating names with a comma, 
+            these two snippets will be pretty much the same:
+        </p>
+
+        <div class="code"><pre>int a;
+int b;</pre></div>
+
+        <p>is the same as:</p>
+
+        <div class="code"><pre>int a, b;</pre></div>
+        
+        <p>When defining multiple variables this way, there are two 
+            common mistakes that new programmers tend to make:
+        </p>
+        <p>The first mistake is giving each variable a type when defining a variable in sequence.</p>
+        <div class="code"><pre>int a, int b; // wrong (compiler error)
+int a, b; // correct</pre></div>
+        <p>The second mistake is to try to define varables 
+            of different types in the same statement, which is not allowed. 
+            Variables of different types must be defined in seperate statements.
+        </p>
+        <div class="code"><pre>int a, double b; // wrong (compiler error)
+
+int a; double b; // correct (but not recommended)
+// correct and recommended (easier to read)
+int a;
+double b;</pre></div>
+
+<div class="best-practice">
+    <h1>Best practice</h1>
+    <p>
+        Although the language allows you to do so, avoid defining multiple 
+        variables of the same type in a single statement. Instead, define each variable in a 
+        seperate statement on its own line.
+    </p>
+</div>
+    <h1>Summary</h1>
+    <p>In C++ we use objects to access memory. A named object is called a variable. 
+        Variables have an identifier, a type, and a value. A variables type is used to determine how 
+        the value in memory should be interpreted
+</div>
+
+    <h1 id="chapter1-4" class="chapter">Chapter 1.4:Variable assignment and initialization</h1>
+
 </body>
-</html>
+</html
