--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LearningC++</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </head>
 <body>
 
@@ -67,14 +70,14 @@
     <h1 id="hello-world">Hello World:</h1>
     <p>Now that you have a decent, brief understanding of what statements and functions are in C++, 
         let's go to the Hello, World! program and take a high-level look at what it does.</p>
-    <div class="code">
-  <pre>#include &lt;iostream&gt;
-
+    <pre class="code">
+    <code class="cpp"></code>#include &lt;iostream&gt;
+    
 int main() {
    std::cout << "Hello world!";
    return 0;
-}</pre>
-</div>
+}</code>
+</pre>
       <p>Line 1 is a special line called a preprocessor directive. This <span class="highlightbox"><b>#include</b></span> preprocessor directive indicates that we should use the contents 
           of the <span class="highlightbox"><b>iostream</b></span> library, which is part of the C++ standard library. <span class="highlightbox"><b>Iostream</b></span> allows us to read/write text to/from the console.</p>
 
@@ -288,7 +291,7 @@ width = 5; // assignment of value 5 into variable width
                 
 // variable width now has value 5</pre></div>
 
-            <p>By default, assignment copies the value on the right-hand side of the = operator, 
+            <p>By default, assignment copies the value on the right-hand side of the <span class="highlightbox"><b>=</b></span> operator, 
                 the variable on the left-hand side of the operator. This is called a <span class="highlightbox"><b>copy assignment</b></span>.
             </p>
             <p>Heres an example where we use the assignment twice:</p>
@@ -353,9 +356,35 @@ int f {};      // value-initialization (empty braces)</pre></div>
 
                 <h1>Default-initialization</h1>
                 <p>
-                    Wen no initializer is provided, the <span class="highlightbox"><b>default-initialization</b></span> is used. In most cases, 
+                    When no initializer is provided, the <span class="highlightbox"><b>default-initialization</b></span> is used. In most cases, 
                     default-initialization performs no initialization and leaves the variable a indeterminate value
                 </p>
+                <h1>Copy-initialization</h1>
+                <p>
+                    When an intial value is provided after an equal sign, the 
+                    <span class="highlightbox"><b>__copy-initialization</b></span>. This form is was from C language.
+                </p>
+                <div class="code"><pre>int width = 5; // copy-initialization of value 5 into variable width</pre></div>
+                <p>Much like copy-assignment, copy-initialization copies the value on the right-hand side of the equals into the variable being 
+                    created on the left-hand side. In the above snippet, variable <span class="highlightbox"><b>width</b></span> will be initialized with value 
+                    <span class="highlightbox"><b>5</b></span>.
+                </p>
+                <p>Copy-initialization has fallen out of favour in modern C++ due to being slower than other forms of initialization. However, C++17 remedied the 
+                    bulk of the issues, and is regaining popularity.
+                </p>
+                <div class="advancedReaders">
+                    <h1>Advanced Readers</h1>
+                    <p>
+                        Copy-initialization is also used whenever values are implicitly copied, such as when passing arguments to a function by value, returning from a 
+                        function by value, or catching exceptions by value.
+                    </p>
+                </div>
 
+                <h1>Direct-initialization</h1>
+                <p>
+                    When an intial value is provided in parentheses, the 
+                    <span class="highlightbox"><b>direct-initialization</b></span> is used.
+                </p>
+                <div class="code"><pre>int width ( 5 ); // direct-initialization of value 5 into variable width</pre></div>
 </body>
 </html
