--- a/index.html
+++ b/index.html
@@ -676,6 +676,32 @@ int main()
     return 0;
 }</code></pre>
 
+                <p>
+                    This produces the result:
+                </p>
+
+                <pre class="code"><code class="cpp">Hello world!</code></pre>
+
+                <p>
+                    Here’s another example where we print both text and the value of a variable in the same statement:
+                </p>
+
+                <pre class="code"><code class="cpp">#include &lt;iostream&gt; // for std::cout
+
+int main()
+{
+    int x{ 5 };
+    std::cout &lt;&lt; "x is equal to: " &lt;&lt; x;
+    return 0;
+}</code></pre>
+
+                <p>
+                    This produces the result:
+                </p>
+
+                <pre class="code"><code class="cpp">x is equal to: 5</code></pre>
+                
+
 
 
 </body>
