--- a/index.html
+++ b/index.html
@@ -700,7 +700,55 @@ int main()
                 </p>
 
                 <pre class="code"><code class="cpp">x is equal to: 5</code></pre>
-                
+
+                <h1>Using <span class = "highlightbox"><b>std::endl</b></span> to output a newline</h1>
+                <p>
+                    What would you expect this program to print?
+                </p>
+
+                <pre class = "code"><code class = "cpp">#include &lt;iostream&gt; // for std::cout
+
+int main()
+{
+    std::cout &lt;&lt; "Hi!";
+    std::cout &lt;&lt; "My name is Alex.";
+    return 0;
+}</pre></code>
+
+                <p>
+                    This produces the result:
+                </p>
+
+                <pre class = "code"><code class = "cpp">Hi!My name is Alex.</code></pre>
+
+                <p>
+                    Seperate output statements dont result in seperate lines of output on the console.
+                    To print separate lines of output in the console, we use a newline character, which 
+                    is a specific character or sequence that moves the cursor to the beginning of the next line. 
+                    This behavior can vary depending on the operating system.
+                </p>
+
+                <p>
+                    One way to output a newline is to output std::endl (which stands for “end line”):
+                </p>
+
+                <pre class = "code"><code class = "cpp">#include <iostream> // for std::cout and std::endl
+
+int main()
+{
+    std::cout << "Hi!" << std::endl; // std::endl will cause the cursor to move to the next line
+    std::cout << "My name is Alex." << std::endl;
+                    
+    return 0;
+}</code></pre>
+
+                <p>
+                    This produces the result:
+                </p>
+
+                <pre class = "code"><code class = "cpp">Hi!
+My name is Alex.</code></pre>
+
 
 
 
