--- a/index.html
+++ b/index.html
@@ -748,6 +748,26 @@ int main()
 
                 <pre class = "code"><code class = "cpp">Hi!
 My name is Alex.</code></pre>
+                    
+                <div class = "tip">
+                    <h1>
+                        Tip
+                    </h1>
+                    <p>
+                        The second <span class = "highlightbox"><b>std::endl</b></span> isn't strictly necessary since the program ends afterward, 
+                        but it serves useful purposes. It signifies the output as a complete statement, positions the cursor on the next line for potential 
+                        future output, and ensures the command prompt appears on a new line after the program finishes on some operating systems.
+                    </p>
+                </div>
+                    
+                    <div class = "best-practice">
+                        <h1>
+                            Best Practice
+                        </h1>
+                        <p>
+                            Output a newline whenever a line of output is complete.
+                        </p>
+                    </div>
 
 
 
