--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <nav>
         <h2 class="index">Index</h2>
         <ul>
-            <li><a href="#chapter1-1">Chapter 1.1: Statements and structure of a program</a></li>       
+            <li><a href="#chapter1-1">Chapter 1.1: Statements and structure of a program</a></li>
+            <li><a href="#subchapter">Hello World: </a></li>            
             <li><a href="#chapter1-2">Chapter 1.2: Comments</a></li>
             <li><a href="#chapter1-3">Chapter 1.3: Introduction to Objects and Variables</a></li>
             <li><a href="#chapter1-4">Chapter 1.4: Variable assignment and initialization</a></li>
@@ -68,7 +69,7 @@
         a function's name. For example, if you see <span class="highlightbox"><b>main()</b></span> or <span class="highlightbox"><b>doSomething()</b></span> , these are shorthand 
         functions named <span class="highlightbox"><b>main</b></span> 
         or <span class="highlightbox"><b>doSomething</b></span>.</p></div>
-        <h1 id="hello-world">Hello World:</h1>
+        <h1 id="subchapter" class="subchapter">Hello World:</h1>
     <p>Now that you have a decent, brief understanding of what statements and functions are in C++, 
         let's go to the Hello, World! program and take a high-level look at what it does.</p>
         <pre class="code"><code class="cpp">
