--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2 class="index">Index</h2>
         <ul>
             <li><a href="#chapter1-1">Chapter 1.1: Statements and structure of a program</a></li>
-            <li><a href="#subchapter">Hello World: </a></li>            
+            <li><a id="hello" href="#subchapter">Hello World: </a></li>            
             <li><a href="#chapter1-2">Chapter 1.2: Comments</a></li>
             <li><a href="#chapter1-3">Chapter 1.3: Introduction to Objects and Variables</a></li>
             <li><a href="#chapter1-4">Chapter 1.4: Variable assignment and initialization</a></li>
